[gd_scene load_steps=2 format=3 uid="uid://ba3dcv0v541bi"]

[ext_resource type="Script" path="res://scoreboardscripts/scoreboard.gd" id="1_3vr1v"]

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vr1v")

[node name="cheat_button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
offset_left = 1890.0
offset_top = 1066.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 680.0
offset_top = 64.0
offset_right = 825.0
offset_bottom = 87.0
text = "Elért pontszámod: "

[node name="Name_l" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1192.0
offset_top = 64.0
offset_right = 1232.0
offset_bottom = 87.0
text = "Geri"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -968.0
offset_right = 280.0
offset_bottom = -928.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Name" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
placeholder_text = "Felhasználónév"
alignment = 1

[node name="Points" type="LineEdit" parent="HBoxContainer"]
visible = false
layout_mode = 2

[node name="Save" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Pontszám mentése"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_top = 157.0
offset_right = 600.0
offset_bottom = 197.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 2
text = "Pozíció"

[node name="Label2" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
text = "Név"

[node name="Label3" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Pontszám"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(1200, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
size_flags_horizontal = 6
columns = 3

[node name="pos_vbox" type="VBoxContainer" parent="ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
alignment = 1

[node name="name_vbox" type="VBoxContainer" parent="ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="score_vbox" type="VBoxContainer" parent="ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 10
alignment = 1

[node name="back_to_menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.5
offset_top = -69.0
offset_right = 68.5
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
text = "Vissza a menübe"

[connection signal="pressed" from="cheat_button" to="." method="_on_cheat_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="back_to_menu" to="." method="_on_back_to_menu_pressed"]
